# RUC-CourseSelectionTool

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  collect.ipynb  collect.py  config.ini  main.py  pyproject.toml  setup.py
.github/workflows/: release.yml
ruccourse/: collect.py  config.ini  main.py  settings.py
